Build 371541409fa53fad43ef77418ee2945bc36b3a96

--- a/.github/ISSUE_TEMPLATE/new_source.yml
+++ b/.github/ISSUE_TEMPLATE/new_source.yml
@@ -1,4 +1,4 @@
-﻿name: "\U0001F195 Нове джерело"
+name: "\U0001F195 Нове джерело"
 description: Подати заявку на додавання нового сайту
 labels: ["new-source"]
 body:
