--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,4 +1,4 @@
-﻿name: Build and Push Builds
+name: Build and Push Builds
 
 on:
   push:
@@ -7,11 +7,14 @@ on:
 
 jobs:
   build:
-    if: github.ref_name != '1-add-ukuatutfun' # <-- This line skips the job if on '1-add-ukuatutfun' branch
     runs-on: ubuntu-latest
 
     steps:
-   # Checkout the dev-builds branch into the 'src' directory
+      # Remove all files in the 'src' directory before checking out the branch
+      - name: Clean src directory
+        run: rm -rf src/*
+
+      # Checkout the dev-builds branch into the 'src' directory
       - name: Checkout dev-builds branch
         uses: actions/checkout@v3
         with:
@@ -42,6 +45,11 @@ jobs:
         run: |
           cd src
           ./gradlew make makePluginsJson
+
+
+      # Clear out the builds directory before copying new files
+      - name: Clear the builds directory
+        run: rm -rf $GITHUB_WORKSPACE/builds/*
 
       # Copy build files
       - name: Copy build files to workspace
