--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
-﻿name: Build
+name: Build
 
 # https://docs.github.com/en/actions/learn-github-actions/workflow-syntax-for-github-actions#concurrency
-concurrency:
+concurrency: 
   group: "build"
   cancel-in-progress: true
 
@@ -16,7 +16,6 @@ on:
 
 jobs:
   build:
-    if: github.ref_name != '1-add-ukuatutfun' # <-- This line skips the job if on '1-add-ukuatutfun' branch
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -29,20 +28,18 @@ jobs:
         with:
           ref: "builds"
           path: "builds"
-
+      
       - name: Clean old builds
         run: rm $GITHUB_WORKSPACE/builds/*.cs3 || true
 
       - name: Setup JDK 17
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v1
         with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'gradle'
+          java-version: 17
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v2
-        
+
       - name: Build Plugins
         run: |
           cd $GITHUB_WORKSPACE/src
